# django-multisite-plus

./: CHANGELOG.rst  addon.json  aldryn_config.py  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: test.yml
src/django_multisite_plus/: admin.py  cms_urls.py  middlewares.py  models.py
src/django_multisite_plus/management/commands/: multisite_plus_populate_sites.py  multisite_plus_rewrite_domains.py
src/django_multisite_plus/migrations/: 0001_initial.py  0002_auto_20180125_1157.py
