[metadata]
name = django-multisite-plus
author = Divio AG
author_email = info@divio.com
license = BSD 3-Clause License
description = An extension to django-multisite that eases local development.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/divio/django-multisite-plus
project_urls =
    Bug Tracker = https://github.com/divio/django-multisite-plus/issues
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.8
setup_requires = setuptools_scm[toml]
install_requires =
    django>=3.2,<5
    aldryn-django
    aldryn_addons
    click
    psycopg2>=2.5
    yurl
dependency_links = [
    'https://github.com/FidelityInternational/django-multisite/tarball/feat/django-42-compat#egg=django-multisite',
    'https://github.com/FidelityInternational/djangocms-multisite/tarball/feat/django-42-compat#egg=djangocms-multisite'
]

[options.entry_points]
console_scripts =
    django-multisite-plus = django_multisite_plus.cli:main

[options.packages.find]
where = src

[flake8]
max-line-length = 120
exclude =
    .git,
    __pycache__,
    **/migrations/,
    build/,
    .tox/,

[isort]
line_length = 79
multi_line_output = 3
lines_after_imports = 2
combine_as_imports = true
include_trailing_comma = true
balanced_wrapping = true
skip = manage.py, migrations, .tox
extra_standard_library = mock
known_django = django
known_cms = cms, menus
known_first_party = djangocms_version_locking
sections = FUTURE, STDLIB, DJANGO, CMS, THIRDPARTY, FIRSTPARTY, LOCALFOLDER
